[package]
name = "ap_kcp"
version = "0.1.1"
authors = ["black-binary <blackbinary@qq.com>"]
edition = "2018"
license = "MIT"
description = "AP-KCP Protocol Library"

[dependencies]
bytes = "1.0.1"
log = "0.4.14"
futures = "0.3.14"
smol = "1.2.5"
async-trait = "0.1.50"
rand = "0.8.3"
env_logger = "0.8.3"
bitflags = "1.2.1"
fast-async-mutex = "0.6.7"

num_cpus = { version = "1.13.0", optional = true }
serde = { version = "1.0.125", optional = true }
serde_derive = { version = "1.0.125", optional = true }
toml = { version = "0.5.8", optional = true }
ring = { version = "0.16.20", optional = true }
clap = { version = "2.33.3", optional = true }

[profile.release]
lto = "fat"
codegen-units = 4

[dev-dependencies]
rand = "0.8.3"
env_logger = "0.8.3"
criterion = "0.3.4"
pprof = { version = "0.4.3", features = ["flamegraph"] } 
toml = "0.5.8"

[features]
serde_support = ["serde", "serde_derive"]
crypto_support = ["ring"]
build_binary = ["clap", "toml", "crypto_support", "num_cpus", "serde_support"]
full = ["serde_support", "crypto_support"]

[[bin]]
name = "ap-kcp-tun"
path = "src/tun.rs"
required-features = ["build_binary"]

[[bench]]
name = "bench"
harness = false
